--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                </button>
-               <a href="index.html" class="navbar-brand">    <h4>Emanuel Krowe Goran</h4>                  </a>
+               <a href="index.html" class="navbar-brand">    <h4>TERNAKODE</h4>               </a>
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
